--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "test-npm",
-  "private": true,
-  "version": "0.0.0",
+  "name": "dynamicdashboard-npmpackage",
+  "version": "1.0.0",
   "type": "module",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsc && rollup -c rollup.config.mjs"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
     "aws-amplify": "^6.14.1",
     "axios": "^1.8.4",
     "d3": "^7.9.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "dynamicdashboard-npmpackage-test": "^1.0.0",
+    "dynamicdashboard-npmpackage-test-1": "^1.0.0",
+    "dynamicdashboard-npmpackage-test-2": "^1.0.0",
+    "process": "^0.11.10",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
+    "svg-npmdyn": "^1.0.0",
+    "svg-updated": "^1.0.0",
+    "svg-updated-dynamic": "^1.0.0",
+    "svg-updated-dynamicdashboard": "^1.0.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.1",
+    "test-dynamicdashboard-npmpackage-1": "^1.0.0",
     "universal-cookie": "^8.0.1",
     "zustand": "^5.0.3"
   },
@@ -26,8 +36,17 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@rollup/plugin-url": "^8.0.2",
+    "@svgr/rollup": "^8.1.0",
+    "@types/d3": "^7.4.3",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-loader": "^10.0.0",
     "eslint": "^9.21.0",
@@ -35,11 +54,24 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
+    "rollup": "^4.39.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "stream-browserify": "^3.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
-  }
+  },
+  "peerDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "author": "Srimathi",
+  "license": "MIT"
 }
