--- a/package.json
+++ b/package.json
@@ -1,77 +1,76 @@
 {
-  "name": "dynamicdashboard-npmpackage",
+  "name": "d-version-v27",
   "version": "1.0.0",
   "type": "module",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "style": "./dist/index.css",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc && rollup -c rollup.config.mjs"
+    "clean": "rm -rf dist",
+    "type:build": "tsc --emitDeclarationOnly",
+    "build": "npm run clean && webpack --config webpack.config.js && npm run type:build"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.1",
     "aws-amplify": "^6.14.1",
     "axios": "^1.8.4",
     "d3": "^7.9.0",
-    "dynamicdashboard-npmpackage-test": "^1.0.0",
-    "dynamicdashboard-npmpackage-test-1": "^1.0.0",
-    "dynamicdashboard-npmpackage-test-2": "^1.0.0",
     "process": "^0.11.10",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
-    "svg-npmdyn": "^1.0.0",
-    "svg-updated": "^1.0.0",
-    "svg-updated-dynamic": "^1.0.0",
-    "svg-updated-dynamicdashboard": "^1.0.0",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.1",
-    "test-dynamicdashboard-npmpackage-1": "^1.0.0",
     "universal-cookie": "^8.0.1",
     "zustand": "^5.0.3"
   },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@eslint/js": "^9.21.0",
-    "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-image": "^3.0.3",
-    "@rollup/plugin-inject": "^5.0.5",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@rollup/plugin-url": "^8.0.2",
-    "@svgr/rollup": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/d3": "^7.4.3",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "babel-loader": "^10.0.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "html-webpack-plugin": "^5.6.3",
-    "rollup": "^4.39.0",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-dts": "^6.2.1",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "stream-browserify": "^3.0.0",
+    "autoprefixer": "^10.4.21",
+    "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.3",
+    "ts-loader": "^9.5.2",
+    "tsup": "^8.4.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "webpack": "^5.98.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-node-externals": "^3.0.0"
   },
-  "peerDependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
+  "keywords": [
+    "react",
+    "component-library",
+    "tailwind",
+    "esm",
+    "webpack",
+    "typescript"
+  ],
   "author": "Srimathi",
-  "license": "MIT"
+  "license": "MIT",
+  "sideEffects": [
+    "*.css"
+  ]
 }
