--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
-  "compilerOptions": {
-      "target": "es5",
-      "module": "esnext",
-      "lib": ["dom", "esnext"],
-      "jsx": "react-jsx",
-      "declaration": true,
-      "declarationDir": "dist/types",
+    "compilerOptions": {
+      "target": "ESNext",
+      "module": "ESNext",
+      "moduleResolution": "Node",
       "outDir": "dist",
-      "strict": true,
-      "moduleResolution": "node",
+      "declaration": true,
+      "declarationDir": "dist",
+      "emitDeclarationOnly": true,
+      "jsx": "react-jsx",
       "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
       "allowSyntheticDefaultImports": true,
-      "typeRoots": ["./node_modules/@types", "./src/types"]
+      "strict": true,
+      "skipLibCheck": true
     },
-    "include": ["src/**/*"]
-}
+    "include": ["src"]
+  }
+  
